Fix menu z-index

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -46,6 +46,7 @@ header {
   header .menu {
     display: inline-block;
     position: fixed;
+    z-index: 1;
     padding: 23px;
     top: 76px;
     right: 28px;
@@ -78,7 +79,7 @@ header {
   color: #fff;
   background: linear-gradient(135deg, #0267ff, #38caff);
   box-shadow: 1px 0 25px rgba(2, 103, 255, 0.15);
-  z-index: 2;
+  z-index: 3;
   padding: 30px;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -97,7 +98,7 @@ header {
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.3s; }
